--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="logo text-center wow fadeInDown">
-							<a href="#"><img src="assets/logo.png" alt="Layla"></a>
+							<h1 class="headline">Justinvest With Me</h1>
 						</div>
 					</div>
 				</div>
@@ -37,12 +37,7 @@
 							<h1 class="headline">
 							We Are Coming With Something
 							<br>
-							<span class="quotes">Amazing</span>
-							<span class="quotes">Beautiful</span>
-							<span class="quotes">Superb</span>
-							<span class="quotes">Terrific</span>
 							<span class="quotes">Awesome</span>
-							<span class="quotes">Amazing</span>
 							<span class="quotes">Amazing</span>
 							<br>
 							Subscribe and Stay UPDATED.
@@ -132,55 +127,9 @@
 			</div>
 		</section>
 
-		<section>
-			<nav id="nav-menu" class="navbar nav-layla" role="navigation">
 
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".main-nav">
-						<i class="ion-navicon"></i>
-					</button>
-					<a class="navbar-brand" href="#">LAYLA</a>
-				</div>
 
-				<div class="collapse navbar-collapse main-nav">
-					<ul class="nav navbar-nav navbar-right">
-						<li><a href="#wrap">Top</a><span class="hover-li"></span></li>
-						<li><a href="#about">About</a><span class="hover-li"></span></li>
-						<li><a href="#contact">Contact</a><span class="hover-li"></span></li>
-					</ul>
-				</div>
-			</nav>
-		</section>
-
-		<section id="about">
-			<div class="container">
-				<div class="row">
-					<div class="col-xs-12">
-						<div class="title text-center wow zoomIn">
-							<h1>ABOUT</h1>
-							<span class="title line"></span>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-sm-6 text-center wow fadeInLeft">
-						<img src="assets/lady.jpg" alt="Jane Doe" class="img-responsive portrait">
-					</div>
-					<div class="col-sm-6 wow fadeInRight">
-						<div class="about-text">
-							<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus itaque quos sunt, possimus inventore quo expedita earum animi optio, dignissimos placeat quaerat voluptatum deserunt voluptatibus molestias iure adipisci totam quidem. </p>
-
-							<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus itaque quos sunt, possimus inventore quo expedita earum animi optio, dignissimos placeat quaerat voluptatum deserunt voluptatibus molestias iure adipisci totam quidem. </p>
-
-							<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus itaque quos sunt, possimus inventore quo expedita earum animi optio, dignissimos placeat quaerat voluptatum deserunt voluptatibus molestias iure adipisci totam quidem. </p>
-							<div class="signature text-right">
-								<img src="assets/signature.png" class="img-responsive" alt="Jane Doe">
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
+		<!-- About Section Will Be Replaced Right Here-->
 
 		<section id="contact">
 			<div class="container">
@@ -221,11 +170,8 @@
 						<div class="social-icons">
 							<ul>
 								<li class="facebook wow fadeInUp" data-wow-delay="1.1s"><a href="#"><i class="ion-social-facebook"></i></a></li>
-								<li class="twitter wow fadeInUp" data-wow-delay="1.2s"><a href="#"><i class="ion-social-twitter"></i></a></li>
-								<li class="googleplus wow fadeInUp" data-wow-delay="1.3s"><a href="#"><i class="ion-social-googleplus"></i></a></li>
-								<li class="github wow fadeInUp" data-wow-delay="1.5s"><a href="#"><i class="ion-social-github"></i></a></li>
 								<li class="linkedin wow fadeInUp" data-wow-delay="1.6s"><a href="#"><i class="ion-social-linkedin"></i></a></li>
-								<li class="youtube wow fadeInUp" data-wow-delay="1.7s"><a href="#"><i class="ion-social-youtube"></i></a></li>
+								<li class="linkedin wow fadeInUp" data-wow-delay="1.6s"><a href="#"><i class="ion-social-instagram"></i></a></li>
 							</ul>
 						</div>
 					</div>
@@ -237,10 +183,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-8">
-						<p class="copyright text-left">Copyright © 2014 Your Website Link. All rights reserved.</p>
-					</div>
-					<div class="col-sm-4">
-						<p class="copyright text-right">Theme by <a href="https://themewagon.com/">ThemeWagon</a></p>
+						<p class="copyright text-left">Copyright © 2022 JustinvestWithMe. All rights reserved.</p>
 					</div>
 				</div>
 			</div>
